[gd_scene load_steps=23 format=3 uid="uid://dbmmaoubp84nk"]

[ext_resource type="Theme" uid="uid://pjssvnja6jwk" path="res://level/gui/theme.tres" id="1_vjwwo"]
[ext_resource type="Texture2D" uid="uid://de2pmqri8aphu" path="res://level/gui/combo/combo-gui.png" id="2_nf7cs"]
[ext_resource type="Script" path="res://level/gui/ActionComboScreen.gd" id="2_qx7gi"]
[ext_resource type="Script" path="res://level/gui/ActionDetailGUI.gd" id="3_iujw7"]
[ext_resource type="Resource" uid="uid://bp42206cq1np4" path="res://entities/boss/boss_stats.tres" id="3_kghw0"]
[ext_resource type="PackedScene" uid="uid://bt6wo80lia41b" path="res://level/gui/combo/action_icon.tscn" id="4_a2wte"]
[ext_resource type="Resource" uid="uid://c8dyby4o78s43" path="res://entities/boss/action/charge/boss_action_charge_bash.tres" id="5_1d81f"]
[ext_resource type="Resource" uid="uid://da1nvew4jbd0v" path="res://entities/boss/action/combustion/boss_action_combustion.tres" id="6_rov48"]
[ext_resource type="Resource" uid="uid://b0cxrsu03dl23" path="res://entities/boss/action/slam/boss_action_slam.tres" id="7_rwo7e"]
[ext_resource type="Resource" uid="uid://c61fkl1ud8j26" path="res://entities/boss/action/dash/boss_action_dash.tres" id="8_bdrr0"]
[ext_resource type="Resource" uid="uid://ba5jrspjog6gs" path="res://entities/boss/action/swipe/boss_action_swipe.tres" id="9_3y5af"]
[ext_resource type="Resource" uid="uid://ckvatt7s0bhyp" path="res://entities/boss/action/roar/boss_action_roar.tres" id="10_s2uvw"]
[ext_resource type="Script" path="res://level/gui/ComboSelectGUI.gd" id="11_d5vuo"]
[ext_resource type="Script" path="res://level/gui/DragVisibleControl.gd" id="12_3xump"]
[ext_resource type="PackedScene" uid="uid://bwmaqrqk5phnk" path="res://level/gui/combo/combo_action_slot.tscn" id="13_64gvp"]
[ext_resource type="Script" path="res://level/gui/BossLevelGUI.gd" id="13_vof31"]
[ext_resource type="Resource" uid="uid://ddhkk175dkckf" path="res://entities/boss/combo/combo_1.tres" id="14_x6njt"]
[ext_resource type="Resource" uid="uid://by12hxe7vrgxt" path="res://entities/boss/combo/combo_2.tres" id="15_6bjcn"]
[ext_resource type="Script" path="res://level/gui/DragBin.gd" id="16_oqdqu"]
[ext_resource type="Texture2D" uid="uid://806kbdfhlmti" path="res://level/coin.png" id="20_1dd8k"]

[sub_resource type="LabelSettings" id="LabelSettings_886xa"]
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_306gy"]
font_size = 36

[node name="ActionComboScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_right = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_vjwwo")
script = ExtResource("2_qx7gi")
boss_stats = ExtResource("3_kghw0")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_nf7cs")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ActionSelect" type="Control" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/ActionSelect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="HBoxContainer/ActionSelect/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ActionDetail" type="PanelContainer" parent="HBoxContainer/ActionSelect/VBoxContainer/Control"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -391.0
offset_top = -122.0
offset_right = -78.0
offset_bottom = 191.0
grow_horizontal = 0
grow_vertical = 2
script = ExtResource("3_iujw7")

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/ActionSelect/VBoxContainer/Control/ActionDetail"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/ActionSelect/VBoxContainer/Control/ActionDetail/MarginContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="HBoxContainer/ActionSelect/VBoxContainer/Control/ActionDetail/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/ActionSelect/VBoxContainer/Control/ActionDetail/MarginContainer/VBoxContainer/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -63.0
offset_top = -63.0
offset_right = 63.0
offset_bottom = 63.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
expand_mode = 2
stretch_mode = 4

[node name="RichTextLabel" type="RichTextLabel" parent="HBoxContainer/ActionSelect/VBoxContainer/Control/ActionDetail/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="BuyButton" type="Button" parent="HBoxContainer/ActionSelect/VBoxContainer/Control/ActionDetail/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "Buy"

[node name="UpgradeButton" type="Button" parent="HBoxContainer/ActionSelect/VBoxContainer/Control/ActionDetail/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "Upgrade for Cost"

[node name="Control2" type="Control" parent="HBoxContainer/ActionSelect/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Control" type="HBoxContainer" parent="HBoxContainer/ActionSelect/VBoxContainer/Control2"]
layout_mode = 0
offset_left = 187.0
offset_top = 44.0
offset_right = 456.0
offset_bottom = 84.0

[node name="ActionIcon" parent="HBoxContainer/ActionSelect/VBoxContainer/Control2/Control" instance=ExtResource("4_a2wte")]
layout_mode = 2
action = ExtResource("5_1d81f")

[node name="ActionIcon2" parent="HBoxContainer/ActionSelect/VBoxContainer/Control2/Control" instance=ExtResource("4_a2wte")]
layout_mode = 2
action = ExtResource("6_rov48")

[node name="ActionIcon3" parent="HBoxContainer/ActionSelect/VBoxContainer/Control2/Control" instance=ExtResource("4_a2wte")]
layout_mode = 2
action = ExtResource("7_rwo7e")

[node name="Control2" type="HBoxContainer" parent="HBoxContainer/ActionSelect/VBoxContainer/Control2"]
layout_mode = 0
offset_left = 129.0
offset_top = 126.0
offset_right = 398.0
offset_bottom = 166.0

[node name="ActionIcon" parent="HBoxContainer/ActionSelect/VBoxContainer/Control2/Control2" instance=ExtResource("4_a2wte")]
layout_mode = 2
action = ExtResource("8_bdrr0")

[node name="ActionIcon2" parent="HBoxContainer/ActionSelect/VBoxContainer/Control2/Control2" instance=ExtResource("4_a2wte")]
layout_mode = 2
action = ExtResource("9_3y5af")

[node name="ActionIcon3" parent="HBoxContainer/ActionSelect/VBoxContainer/Control2/Control2" instance=ExtResource("4_a2wte")]
layout_mode = 2
action = ExtResource("10_s2uvw")

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BossLevel" type="Control" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("13_vof31")

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/BossLevel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 85.0
offset_top = -13.0
offset_right = -118.0
offset_bottom = 26.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/BossLevel/HBoxContainer"]
layout_mode = 2
size_flags_stretch_ratio = 2.0
text = "Current Boss Health: 1"

[node name="Control" type="Control" parent="HBoxContainer/VBoxContainer/BossLevel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button" type="Button" parent="HBoxContainer/VBoxContainer/BossLevel/HBoxContainer"]
layout_mode = 2
text = "Upgrade for 1 Gold"

[node name="ComboSelect" type="Control" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0
script = ExtResource("11_d5vuo")

[node name="Control2" type="Control" parent="HBoxContainer/VBoxContainer/ComboSelect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -202.0
offset_right = 203.0
offset_bottom = 63.0
grow_horizontal = 2

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/ComboSelect/Control2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "DROP INTO A SLOT"
label_settings = SubResource("LabelSettings_886xa")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
script = ExtResource("12_3xump")

[node name="Control" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/ComboSelect"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 88.0
offset_top = -96.0
offset_right = -114.0
offset_bottom = 103.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/ComboSelect/Control"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/ComboSelect/Control/VBoxContainer"]
layout_mode = 2
text = "Combo 1"

[node name="Control" type="PanelContainer" parent="HBoxContainer/VBoxContainer/ComboSelect/Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Control" type="Control" parent="HBoxContainer/VBoxContainer/ComboSelect/Control/VBoxContainer/Control"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/ComboSelect/Control/VBoxContainer/Control/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 4.0
offset_right = -19.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2

[node name="ComboActionSlot" parent="HBoxContainer/VBoxContainer/ComboSelect/Control/VBoxContainer/Control/Control/HBoxContainer" instance=ExtResource("13_64gvp")]
layout_mode = 2
combo = ExtResource("14_x6njt")

[node name="ComboActionSlot2" parent="HBoxContainer/VBoxContainer/ComboSelect/Control/VBoxContainer/Control/Control/HBoxContainer" instance=ExtResource("13_64gvp")]
layout_mode = 2
combo = ExtResource("14_x6njt")
slot = 1

[node name="ComboActionSlot3" parent="HBoxContainer/VBoxContainer/ComboSelect/Control/VBoxContainer/Control/Control/HBoxContainer" instance=ExtResource("13_64gvp")]
layout_mode = 2
combo = ExtResource("14_x6njt")
slot = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/ComboSelect/Control"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/ComboSelect/Control/VBoxContainer2"]
layout_mode = 2
text = "Combo 2"

[node name="Control" type="PanelContainer" parent="HBoxContainer/VBoxContainer/ComboSelect/Control/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="Control" type="Control" parent="HBoxContainer/VBoxContainer/ComboSelect/Control/VBoxContainer2/Control"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/ComboSelect/Control/VBoxContainer2/Control/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 4.0
offset_right = -19.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2

[node name="ComboActionSlot" parent="HBoxContainer/VBoxContainer/ComboSelect/Control/VBoxContainer2/Control/Control/HBoxContainer" instance=ExtResource("13_64gvp")]
layout_mode = 2
combo = ExtResource("15_6bjcn")

[node name="ComboActionSlot2" parent="HBoxContainer/VBoxContainer/ComboSelect/Control/VBoxContainer2/Control/Control/HBoxContainer" instance=ExtResource("13_64gvp")]
layout_mode = 2
combo = ExtResource("15_6bjcn")
slot = 1

[node name="ComboActionSlot3" parent="HBoxContainer/VBoxContainer/ComboSelect/Control/VBoxContainer2/Control/Control/HBoxContainer" instance=ExtResource("13_64gvp")]
layout_mode = 2
combo = ExtResource("15_6bjcn")
slot = 2

[node name="Control3" type="Control" parent="HBoxContainer/VBoxContainer/ComboSelect"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -202.5
offset_top = -169.0
offset_right = 202.5
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("16_oqdqu")

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/ComboSelect/Control3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Drag here to remove"
label_settings = SubResource("LabelSettings_886xa")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Control" type="Control" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Control" type="Control" parent="HBoxContainer/VBoxContainer/Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/VBoxContainer/Control/HBoxContainer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_bottom = 29

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/Control/HBoxContainer/Control/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 18

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/VBoxContainer/Control/HBoxContainer/Control/MarginContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("20_1dd8k")
stretch_mode = 4

[node name="Money" type="Label" parent="HBoxContainer/VBoxContainer/Control/HBoxContainer/Control/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
label_settings = SubResource("LabelSettings_306gy")
vertical_alignment = 1
clip_text = true

[node name="Control2" type="Control" parent="HBoxContainer/VBoxContainer/Control/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/VBoxContainer/Control/HBoxContainer/Control2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 20

[node name="StartButton" type="Button" parent="HBoxContainer/VBoxContainer/Control/HBoxContainer/Control2/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Start"

[connection signal="bought" from="HBoxContainer/ActionSelect/VBoxContainer/Control/ActionDetail" to="." method="_on_action_detail_bought"]
[connection signal="upgraded" from="HBoxContainer/ActionSelect/VBoxContainer/Control/ActionDetail" to="." method="_on_action_detail_upgraded"]
[connection signal="pressed" from="HBoxContainer/ActionSelect/VBoxContainer/Control/ActionDetail/MarginContainer/VBoxContainer/BuyButton" to="HBoxContainer/ActionSelect/VBoxContainer/Control/ActionDetail" method="_on_buy_button_pressed"]
[connection signal="pressed" from="HBoxContainer/ActionSelect/VBoxContainer/Control/ActionDetail/MarginContainer/VBoxContainer/UpgradeButton" to="HBoxContainer/ActionSelect/VBoxContainer/Control/ActionDetail" method="_on_upgrade_button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/BossLevel/HBoxContainer/Button" to="HBoxContainer/VBoxContainer/BossLevel" method="_on_button_pressed"]
[connection signal="binned" from="HBoxContainer/VBoxContainer/ComboSelect/Control3" to="HBoxContainer/VBoxContainer/ComboSelect" method="_on_control_3_binned"]
